routes for login and register(sign-up)

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -38,7 +38,7 @@
       <div class="flex justify-between items-center gap-2">
         <span class="inline-flex py-2 mt-4 text-sm text-gray-500">Don’t have an
           account?&nbsp;<a
-            href="/signup"
+            href="/register"
             class="text-custom-blue-500 font-semibold underline"
           >
             Sign up</a>
