--- a/views/createActivity.hbs
+++ b/views/createActivity.hbs
@@ -1,1 +1,71 @@
-<h2>Create Activity</h2>
+<div class="createActivityContainer mt-4 mx-2 p-4 border rounded-2xl shadow-sm">
+  <h2 class="font-bold text-custom-blue-500 text-xl">Create an activity</h2>
+
+  <form action="" class="mt-4 grid grid-cols-2 gap-4">
+    <div>
+      <label
+        for="title"
+        class="block text-sm font-medium text-gray-700"
+      >Title</label>
+      <input
+        type="text"
+        name="title"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-custom-blue-500 focus:ring-custom-blue-500 sm:text-sm"
+      />
+    </div>
+
+    <div>
+      <label
+        for="distance"
+        class="block text-sm font-medium text-gray-700"
+      >Distance</label>
+      <input
+        type="text"
+        name="distance"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-custom-blue-500 focus:ring-custom-blue-500 sm:text-sm"
+      />
+    </div>
+    <div>
+      <label
+        for="duration"
+        class="block text-sm font-medium text-gray-700"
+      >Duration</label>
+      <input
+        type="text"
+        name="duration"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-custom-blue-500 focus:ring-custom-blue-500 sm:text-sm"
+      />
+    </div>
+    <div>
+      <label
+        for="elevation"
+        class="block text-sm font-medium text-gray-700"
+      >Elevation</label>
+      <input
+        type="text"
+        name="elevation"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-custom-blue-500 focus:ring-custom-blue-500 sm:text-sm"
+      />
+    </div>
+    <div class="col-span-2">
+      <label
+        for="description"
+        class="block text-sm font-medium text-gray-700"
+      >Description</label>
+      <textarea
+        name="description"
+        rows="4"
+        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-custom-blue-500 focus:ring-custom-blue-500 sm:text-sm"
+        placeholder=""
+      ></textarea>
+    </div>
+    <div class="col-span-2 flex w-full justify-end">
+      <button
+        type="submit"
+        class="inline-flex justify-center rounded-md border mt-4 border-transparent bg-custom-blue-500 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-custom-blue-600 focus:outline-none focus:ring-2 focus:ring-custom-blue-500 focus:ring-offset-2"
+      >
+        Post
+      </button>
+    </div>
+  </form>
+</div>
