--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -25,14 +25,12 @@
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-custom-blue-500 focus:ring-custom-blue-500 sm:text-sm"
       />
       <label
-        for="first-name"
+        for="password"
         class="mt-4 block text-sm font-medium text-gray-700"
       >Password</label>
       <input
         type="password"
-        name="first-name"
-        id="first-name"
-        autocomplete="given-name"
+        name="password"
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-custom-blue-500 focus:ring-custom-blue-500 sm:text-sm"
       />
       <div class="flex justify-between items-center gap-2">
