login and register post routes

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -30,8 +30,7 @@
       >Password</label>
       <input
         type="password"
-        name="first-name"
-        id="first-name"
+        name="password"
         autocomplete="given-name"
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-custom-blue-500 focus:ring-custom-blue-500 sm:text-sm"
       />
