--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -14,7 +14,7 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam imperdiet
       magna, vel finibus orci hendrerit at.
     </p>
-    <form action="" class="mt-12">
+    <form action="/login" method="POST" class="mt-12">
       <label
         for="username"
         class="block text-sm font-medium text-gray-700"
