--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -15,7 +15,7 @@
     <h2 class="self-start font-bold text-custom-blue-500 text-2xl mt-32">
       Register
     </h2>
-    <form action="" class="mt-4 w-96">
+    <form action="/register" method="POST" class="mt-4 w-96">
       <label
         for="username"
         class="block text-sm font-medium text-gray-700"
