create activity has been added to partials

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,5 +1,6 @@
+{{> createActivity}}
 <button><a href="/createActivity">Add Activity</a></button>
-<br>
+<br />
 Posts:
-<br>
+<br />
 <button><a href="/login">Logout</a></button>
