--- a/views/myActivities.hbs
+++ b/views/myActivities.hbs
@@ -1,1 +1,7 @@
-<h2>My activities</h2>
+<h2>My Activities</h2>
+<br>
+{{#each posts}}
+ <h3>{{title}} <button><a href="/edit">Edit</a></button>
+    <button><a href="/delete">Delete</a></button></h3>
+ 
+{{/each}}
