populating the profile page with posts

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -4,7 +4,10 @@
 Posts:
 {{#each posts}}
     <li>
-        {{ this.title }}
+        {{ title }}
+        {{ time }} kilometers
+        {{ duration }} minutes
+        {{ description }}
         
     </li>
   {{/each}}
