--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -7,6 +7,7 @@ Posts:
         {{ title }}
         {{ time }} kilometers
         {{ duration }} minutes
+        {{ elevation }} feet
         {{ description }}
         
     </li>
