sidebar has been added to profile

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,3 +1,10 @@
+<div class="wrapper flex">
+<!-- Side bar  -->
+<div class="sidebar w-80 p-4 bg-slate-100 h-screen flex flex-col gap-4">
+  
+</div>
+</div>
+
 {{> createActivity}}
 <button><a href="/createActivity">Add Activity</a></button>
 <br />
