branding has been added to profile

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,7 +1,13 @@
 <div class="wrapper flex">
 <!-- Side bar  -->
 <div class="sidebar w-80 p-4 bg-slate-100 h-screen flex flex-col gap-4">
-  
+   <!-- Branding -->
+  <div class="branding flex items-center">
+          <span
+            class="text-2xl text-custom-blue-500 font-bold uppercase tracking-widest"
+            >Strive</span
+          >
+        </div>
 </div>
 </div>
 
