--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,29 +1,86 @@
 <div class="wrapper flex">
-<!-- Side bar  -->
-<div class="sidebar w-80 p-4 bg-slate-100 h-screen flex flex-col gap-4">
-   <!-- Branding -->
-  <div class="branding flex items-center">
-          <span
-            class="text-2xl text-custom-blue-500 font-bold uppercase tracking-widest"
-            >Strive</span
-          >
+  <!-- Side bar  -->
+  <div class="sidebar w-80 p-4 bg-slate-100 h-screen flex flex-col gap-4">
+    <!-- Branding -->
+    <div class="branding flex items-center">
+      <span
+        class="text-2xl text-custom-blue-500 font-bold uppercase tracking-widest"
+      >Strive</span>
+    </div>
+    <!-- Profile -->
+    <div class="profile flex flex-col bg-white shadow-md rounded-md p-4">
+      <div class="flex items-center gap-4 mb-4">
+        <img src="/images/user.png" class="w-12" alt="" />
+        <div class="flex flex-col">
+          <span class="user-name font-bold">Anil Ozsoy</span>
+          <span class="email text-sm text-gray-400">@anilozsoy</span>
         </div>
-</div>
+      </div>
+      <div class="description text-sm mb-4 text-slate-500">
+        🏃‍♂️ Daily running addict.
+      </div>
+      <div class="Details flex flex-col text-sm gap-2">
+        <div class="location flex items-center gap-1">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-6 h-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z"
+            ></path>
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z"
+            ></path>
+          </svg>
+          <span>Dusseldorf</span>
+        </div>
+        <div class="birtdate flex items-center gap-1">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-6 h-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M12 8.25v-1.5m0 1.5c-1.355 0-2.697.056-4.024.166C6.845 8.51 6 9.473 6 10.608v2.513m6-4.87c1.355 0 2.697.055 4.024.165C17.155 8.51 18 9.473 18 10.608v2.513m-3-4.87v-1.5m-6 1.5v-1.5m12 9.75l-1.5.75a3.354 3.354 0 01-3 0 3.354 3.354 0 00-3 0 3.354 3.354 0 01-3 0 3.354 3.354 0 00-3 0 3.354 3.354 0 01-3 0L3 16.5m15-3.38a48.474 48.474 0 00-6-.37c-2.032 0-4.034.125-6 .37m12 0c.39.049.777.102 1.163.16 1.07.16 1.837 1.094 1.837 2.175v5.17c0 .62-.504 1.124-1.125 1.124H4.125A1.125 1.125 0 013 20.625v-5.17c0-1.08.768-2.014 1.837-2.174A47.78 47.78 0 016 13.12M12.265 3.11a.375.375 0 11-.53 0L12 2.845l.265.265zm-3 0a.375.375 0 11-.53 0L9 2.845l.265.265zm6 0a.375.375 0 11-.53 0L15 2.845l.265.265z"
+            ></path>
+          </svg>
+          <span>June 17, 1984</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
 
-{{> createActivity}}
+{{!-- {{> createActivity}} --}}
 <button><a href="/createActivity">Add Activity</a></button>
 <br />
 Posts:
 {{#each posts}}
-    <li>
-        {{ title }}
-        {{ time }} kilometers
-        {{ duration }} minutes
-        {{ elevation }} feet
-        {{ description }}
-        
-    </li>
-  {{/each}}
+  <li>
+    {{title}}
+    {{time}}
+    kilometers
+    {{duration}}
+    minutes
+    {{elevation}}
+    feet
+    {{description}}
+
+  </li>
+{{/each}}
 <br />
 <button><a href="/login">Logout</a></button>
