--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -163,24 +163,73 @@
       </li>
     </ul>
   </div>
+  <!-- Feeds -->
+  <div class="feeds flex flex-col p-4 w-full">
+    <div class="flex justify-between">
+      <h2 class="font-bold text-custom-blue-500 text-2xl">Feeds</h2>
+      <button
+        type="submit"
+        class="inline-flex justify-center rounded-md border mb-4 border-transparent bg-custom-blue-500 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-custom-blue-600 focus:outline-none focus:ring-2 focus:ring-custom-blue-500 focus:ring-offset-2 w-32 items-center gap-2"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
+          ></path>
+        </svg>
+        Create
+      </button>
+    </div>
+    <!--Single Feed -->
+    {{#each posts}}
+      <div class="singelfeed bg-white shadow-md p-4 rounded-md mb-4">
+        <div class="flex gap-4 mb-4">
+          <img src="/images/user.png" class="w-10 h-10" alt="" />
+          <div class="flex flex-col">
+            <span class="user-name font-bold text-sm">Anil Ozsoy</span>
+            <span class="email text-sm text-gray-400">November 28, 2022 at 1:46
+              PM</span>
+          </div>
+        </div>
+        <div class="feed-details pl-14">
+          <div class="font-bold text-2xl mb-4">{{title}}</div>
+          <div class="flex gap-6">
+            <div class="flex flex-col">
+              <div class="text-xs text-gray-400">Distance</div>
+              <div class="text-2xl">{{distance}}<span
+                  class="text-xs"
+                >km</span></div>
+            </div>
+            <div class="flex flex-col">
+              <div class="text-xs text-gray-400">Elevation</div>
+              <div class="text-2xl">{{elevation}}<span
+                  class="text-xs"
+                >meter</span></div>
+            </div>
+            <div class="flex flex-col">
+              <div class="text-xs text-gray-400">Duration</div>
+              <div class="text-2xl">{{duration}}<span
+                  class="text-xs"
+                >min.</span></div>
+            </div>
+          </div>
+          <p class="feed-description mt-4 text-sm">
+            {{description}}
+          </p>
+        </div>
+      </div>
+    {{/each}}
+  </div>
 </div>
 
 {{!-- {{> createActivity}} --}}
-<button><a href="/createActivity">Add Activity</a></button>
-<br />
-Posts:
-{{#each posts}}
-  <li>
-    {{title}}
-    {{time}}
-    kilometers
-    {{duration}}
-    minutes
-    {{elevation}}
-    feet
-    {{description}}
 
-  </li>
-{{/each}}
-<br />
 <button><a href="/login">Logout</a></button>
