--- a/views/partials/createActivity.hbs
+++ b/views/partials/createActivity.hbs
@@ -1,4 +1,4 @@
-<div class="createActivityContainer mt-4 mx-2 p-4 border rounded-2xl shadow-sm">
+<div class="createActivityContainer my-4 p-4 border rounded-2xl shadow-sm">
   <h2 class="font-bold text-custom-blue-500 text-xl">Create an activity</h2>
 
   <form
