adding logout route to the auth

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -159,7 +159,7 @@
             ></path>
           </svg>
         </span>
-        <a href="" class="text-custom-blue-500">Log out</a>
+        <a href="/logout" class="text-custom-blue-500">Log out</a>
       </li>
     </ul>
   </div>
