--- a/views/myActivities.hbs
+++ b/views/myActivities.hbs
@@ -1,7 +1,10 @@
 <h2>My Activities</h2>
 <br>
 {{#each posts}}
- <h3>{{title}} <button><a href="/edit">Edit</a></button>
+ <h3>{{title}} <button><a href="/myActivities/{{_id}}/edit">Edit</a></button>
     <button><a href="/delete">Delete</a></button></h3>
  
 {{/each}}
+
+<button><a href="/profile">To Profile Page</a></button></h3>
+ 
