--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -10,7 +10,7 @@
     <!-- Profile -->
     <div class="profile flex flex-col bg-white shadow-md rounded-md p-4">
       <div class="flex items-center gap-4 mb-4">
-        <img src="/images/user.png" class="w-12" alt="" />
+        <img src="{{user.avatar}}" class="w-12" alt="" />
         <div class="flex flex-col">
           <span class="user-name font-bold">{{user.username}}</span>
           <span class="email text-sm text-gray-400">@{{user.username}}</span>
