adding new user photo to the profile

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -140,7 +140,7 @@
             ></path>
           </svg>
         </span>
-        <a href="" class="text-custom-blue-500">Settings</a>
+        <a href="/settings" class="text-custom-blue-500">Settings</a>
       </li>
       <li class="flex text-sm items-center gap-2">
         <span>
