--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -193,14 +193,13 @@
     <div class="feeds flex flex-col p-4 w-full h-screen overflow-y-auto">
       <!--Single Feed -->
       {{> createActivity}}
-      {{#each posts}}
+      {{#each user.posts}}
         <div class="singelfeed bg-white shadow-md p-4 rounded-md mb-4">
           <div class="flex gap-4 mb-4">
-            <img src="/images/user.png" class="w-10 h-10" alt="" />
+            <img src="{{../user.avatar}}" class="w-10 h-10" alt="" />
             <div class="flex flex-col">
-              <span class="user-name font-bold text-sm">Anil Ozsoy</span>
-              <span class="email text-sm text-gray-400">November 28, 2022 at
-                1:46 PM</span>
+              <span class="user-name font-bold text-sm"> {{../user.username}}</span>
+              <span class="email text-sm text-gray-400">{{createdAt}}</span>
             </div>
           </div>
           <div class="feed-details pl-14">
