--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -10,6 +10,9 @@
   <label for="birthday">Birthday</label>
   <input type="date" name="birthday" value="{{birthday}}" />
   <label for="avatar">Avatar</label>
+  <img src="{{avatar}}" alt="" class="w-12" />
   <input type="file" name="avatar" value="" />
+  <label for="description">Description</abel>
+  <textarea name="description" id="" cols="30" rows="10">{{description}}</textarea>
   <button type="submit">Submit</button>
 </form>
