adding birtday and location on profileview

--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -1,14 +1,10 @@
 <h2>Settings Screen</h2>
 <a href="/profile">Profile</a>
 <form action="/settings" method="post" enctype="multipart/form-data">
-  <label for="username">Username</label>
-  <input type="text" name="username" value="{{username}}" />
-  <label for="email">email</label>
-  <input type="email" name="email" value="{{email}}" />
   <label for="location">Location</label>
   <input type="text" name="location" value="{{location}}" />
   <label for="birthday">Birthday</label>
-  <input type="date" name="birthday" value="{{birthday}}" />
+  <input type="date" name="birthday" value="{{dateOfBirth}}" />
   <label for="avatar">Avatar</label>
   <img src="{{avatar}}" alt="" class="w-12" />
   <input type="file" name="avatar" value="" />
