--- a/views/myActivities.hbs
+++ b/views/myActivities.hbs
@@ -1,8 +1,9 @@
 <h2>My Activities</h2>
 <br>
 {{#each posts}}
- <h3>{{title}}   
+ <h3>{{title}}  </h3> 
  <button><a href="/myActivities/{{_id}}/edit">Edit</a></button>
- <button><a href="/myActivities/{{_id}}/delete" method="POST">Delete</a></button>
- </h3>
+  <form action="/myActivities/{{_id}}/delete" method="POST">
+      <button>Delete</button>
+    </form>
 {{/each}}
