--- a/views/myActivities.hbs
+++ b/views/myActivities.hbs
@@ -2,8 +2,9 @@
 <br>
 {{#each posts}}
  <h3>{{title}} <button><a href="/myActivities/{{_id}}/edit">Edit</a></button>
-    <button><a href="/delete">Delete</a></button></h3>
- 
+ <form action="/myActivities/{{_id}}/delete" method="POST">
+      <button>Delete</button>
+    </form>
 {{/each}}
 
 <button><a href="/profile">To Profile Page</a></button></h3>
