testing two images

--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -7,10 +7,17 @@
     </div>
     <img
       class="w-full object-cover top-0"
-      src="/images/alejandro-barba-X9fNpnH-unsplash.jpg"
+      src="/images/alejandro-barba-X9fNpnH-qTI-unsplash(2).jpg"
       alt=""
     />
   </div>
+ 
+    <img
+      class="w-full object-cover top-0"
+      src="/images/ciprian-pardau-j8fVoo3i8xk-unsplash.jpg"
+      alt=""
+    />
+
   <div>
     <h2 class="self-start font-bold text-custom-blue-500 text-2xl mt-32">
       Register
