fixing image upload error

--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -4,7 +4,7 @@
   <label for="location">Location</label>
   <input type="text" name="location" value="{{location}}" />
   <label for="birthday">Birthday</label>
-  <input type="date" name="birthday" value="{{dateOfBirth}}" />
+  <input type="date" name="birthday" />
   <label for="avatar">Avatar</label>
   <img src="{{avatar}}" alt="" class="w-12" />
   <input type="file" name="avatar" value="" />
