--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -6,7 +6,7 @@
   <label for="birthday">Birthday</label>
   <input type="date" name="birthday" />
   <label for="avatar">Avatar</label>
-  <img src="{{avatar}}" alt="" class="w-12" />
+  <img src="{{avatar}}" alt="" class="w-12 rounded-full" />
   <input type="file" name="avatar" value="" />
   <label for="description">Description</abel>
   <textarea name="description" id="" cols="30" rows="10">{{description}}</textarea>
