--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -206,7 +206,7 @@
       {{#each user.posts}}
         <div class="singelfeed bg-white shadow-md p-4 rounded-md mb-4">
           <div class="flex gap-4 mb-4">
-            <img src="{{../user.avatar}}" class="w-10 h-10" alt="" />
+            <img src="{{../user.avatar}}" class="w-10 h-10 rounded-full" alt="" />
             <div class="flex flex-col">
               <span class="user-name font-bold text-sm"> {{../user.username}}</span>
               <span class="email text-sm text-gray-400">{{createdAt}}</span>
