fixing page title of setting screen

--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -14,7 +14,7 @@
 
   <div>
     <h2 class="self-start font-bold text-custom-blue-500 text-2xl mt-32">
-      Profile
+      Settings
     </h2>
 <form action="/settings" method="post" enctype="multipart/form-data">
           <label for="location" class="block text-sm font-medium text-gray-700"
