adding margin to the title on settings

--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -13,7 +13,7 @@
   </div>
 
   <div>
-    <h2 class="self-start font-bold text-custom-blue-500 text-2xl mt-32">
+    <h2 class="self-start font-bold text-custom-blue-500 text-2xl mt-32 mb-4">
       Settings
     </h2>
 <form action="/settings" method="post" enctype="multipart/form-data">
