--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -14,10 +14,17 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam imperdiet
       magna, vel finibus orci hendrerit at.
     </p>
+   
+  {{#if errorMessage}}
+      <p class="error">{{errorMessage}}</p>
+    {{/if}}
+
     <form action="/login" method="POST" class="mt-12">
       <label
         for="username"
         class="block text-sm font-medium text-gray-700"
+
+
       >Username</label>
       <input
         type="text"
@@ -42,6 +49,7 @@
           >
             Sign up</a>
         </span>
+
         <button
           type="submit"
           class="inline-flex justify-center rounded-md border mt-4 border-transparent bg-custom-blue-500 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-custom-blue-600 focus:outline-none focus:ring-2 focus:ring-custom-blue-500 focus:ring-offset-2"
