--- a/views/edit-post.hbs
+++ b/views/edit-post.hbs
@@ -17,7 +17,7 @@
       Settings
     </h2>
 
-    <form action="/myActivities/{{post._id}}/edit" method="post">
+    <form action="/activitieslist/{{post._id}}/edit" method="post">
       <label for="title" class="block text-sm font-medium text-gray-700">
         Title:
       </label>
