--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -126,7 +126,7 @@
               d="M6 6.878V6a2.25 2.25 0 012.25-2.25h7.5A2.25 2.25 0 0118 6v.878m-12 0c.235-.083.487-.128.75-.128h10.5c.263 0 .515.045.75.128m-12 0A2.25 2.25 0 004.5 9v.878m13.5-3A2.25 2.25 0 0119.5 9v.878m0 0a2.246 2.246 0 00-.75-.128H5.25c-.263 0-.515.045-.75.128m15 0A2.25 2.25 0 0121 12v6a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 18v-6c0-.98.626-1.813 1.5-2.122"
             ></path>
           </svg>
-        </span><a href="/myactivities" class="text-custom-blue-500">My activities</a>
+        </span><a href="/activitieslist" class="text-custom-blue-500">My activities</a>
       </li>
       <li class="flex text-sm items-center gap-2">
         <span>
