changing the Latin to English

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -8,11 +8,10 @@
     <span class="block mt-8 font-semibold text-custom-blue-500">Join our
       community</span>
     <h2 class="mt-4 text-custom-darkblue-500 font-extrabold text-3xl">
-      Lorem ipsum dolor sit amet, adipiscing.
+      Log all your workouts and share with your friends
     </h2>
     <p class="pt-6 text-gray-400">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam imperdiet
-      magna, vel finibus orci hendrerit at.
+      Upload everything from dog walks to gruelling ultra-marathons. Why exercise if you can't boast about it afterwards?
     </p>
    
   {{#if errorMessage}}
