--- a/views/partials/createActivity.hbs
+++ b/views/partials/createActivity.hbs
@@ -22,7 +22,7 @@
       <label
         for="distance"
         class="block text-sm font-medium text-gray-700"
-      >Distance</label>
+      >Distance (km)</label>
       <input
         type="text"
         name="distance"
@@ -33,7 +33,7 @@
       <label
         for="duration"
         class="block text-sm font-medium text-gray-700"
-      >Duration</label>
+      >Duration (min)</label>
       <input
         type="text"
         name="duration"
@@ -44,7 +44,7 @@
       <label
         for="elevation"
         class="block text-sm font-medium text-gray-700"
-      >Elevation</label>
+      >Elevation (ft)</label>
       <input
         type="text"
         name="elevation"
