--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,4 +1,4 @@
-<div class="wrapper flex">
+<div class="wrapper flex"> {{!-- iuogouugo --}}
   <!-- Side bar  -->
   <div class="sidebar w-80 p-4 bg-slate-100 h-screen flex flex-col gap-4">
     <!-- Branding -->
